--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <title>The PROSUMER 그림판</title> -->
   <!-- 외부 CSS 파일 연결 -->
   <link rel="stylesheet" href="style.css" />
@@ -17,6 +18,7 @@
     <!-- 팔레트 버튼 (이미지) -->
     <img src="palette.png" alt="Palette" id="paletteTool" title="팔레트 열기" />
     <!-- 실제 색 선택용 input (기본은 숨김) -->
+    <label for="colorPicker" style="display:none;">색상 선택</label>
     <input type="color" id="colorPicker" value="#000000" style="display:none;" />
 
     <!-- 지우개 버튼 (이미지) -->
